correction to html file

--- a/lex'smealplan.html
+++ b/lex'smealplan.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weekly Meal Planner</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="node_modules/bootswatch/dist/sketchy/bootstrap.min.css">
 </head>
 <body>
     <H1>Weekly Meal Planner-what is for dinner this week?</H1>
@@ -25,10 +25,8 @@
     </div>
 
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    <script src="Billy.js"></script>
-    <script src="Alexa.js"></script>
-    <script src="James.js"></script>
-    <script src="Jon.js"></script>
+    <script src="lex'smealplan.js"></script>
+
     
 </body>
 </html>
