first commitby lex

--- a/recipeindex.html
+++ b/recipeindex.html
@@ -1,5 +1,3 @@
-<!-- THIS IS JUST FOR BILLYS USE WIP -->
-
 
 <!DOCTYPE html>
 <html lang="en">
@@ -8,8 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe's</title>
-    <!-- <link rel="stylesheet" href="node_modules/bootswatch/dist/sketchy/bootstrap.min.css"> -->
+    <title>Recipe Box</title>
+    <link rel="stylesheet" href="node_modules/bootswatch/dist/lux/bootstrap.css">
 
 </head>
 
@@ -33,10 +31,8 @@
 
 
     <!-- <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script> -->
-    <script src="Billy.js"></script>
-    <!-- <script src="Alexa.js"></script>
-    <script src="James.js"></script>
+    <!-- <script src="Billy.js"></script> -->
+    <script src="Alexa.js"></script>
+    <!-- <script src="James.js"></script>
     <script src="Jon.js"></script> -->
 </body>
-
-</html>
