Billys second push with parts commented out for testing

--- a/group.html
+++ b/group.html
@@ -33,10 +33,13 @@
 
 
     <!-- <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script> -->
-    <script src="Billy.js"></script>
-    <!-- <script src="Alexa.js"></script>
+
+
+    <script src="Alexa.js"></script>
     <script src="James.js"></script>
-    <script src="Jon.js"></script> -->
+    <script src="Jon.js"></script>
+    <script src="Billy.js"></script>
+
 </body>
 
 </html>
