Added James' and my html to recipeindex, corrected a typo in Alexa.js

--- a/recipeindex.html
+++ b/recipeindex.html
@@ -28,15 +28,54 @@
         </div>
     </div>
 
+    <div class="card">
+        <div class="card-body">
+            <div class="row">
+                <div class="col-sm">
+                    <div class="form-group">
+                        <label for="ingredient">Ingredient</label>
+                        <input type="text" class="form-control" id="ingredient">
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="form-group">
+                        <label for="amount">Amount</label>
+                        <input type="text" class="form-control" id="amount">
+                    </div>
+                </div>
+            </div>
+            <div>
+                <button id="add" class="btn btn-dark form-control mt-2">Add</button>
+            </div>
+        </div>
+    </div>
 
-    <!-- <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script> -->
+    <div class="container">
+        <div class="row">
+        <div class="col col-xs-12">
+            <table id="list" class="table table-dark table-striped">
+                <tr>
+                    <th>Ingredient</th>
+                    <th>Amount</th>
+                    <th>Action</th>
+                    <th>
+                        <button type="submit" class="btn btn-warning" id="edit-button">Edit</button>
+                        <button type="submit" class = "btn btn-success" id="end-editing">Save</button>
+                    </th>
+                </tr>
+
+            </table>
+        </div>
+        </div>
+        </div>
+
 
 
     <script src="Alexa.js"></script>
     <script src="James.js"></script>
     <script src="Jon.js"></script>
     <script src="Billy.js"></script>
-
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
