--- a/combined.html
+++ b/combined.html
@@ -17,7 +17,7 @@
             <div class="col mt-5 border rounded p-3">
                 <label for="recipe-name-input" class="form-label">Recipes</label>
                 <input type="text" class="form-control" id="recipe-name-input" />
-                <button type="button" class="btn btn-primary" onclick="onAddRecipe()">Add</button>
+                <button type="button" class="btn btn-primary" onclick="onAddRecipe(); formClear()">Add</button>
 
             </div>
         </div>
