--- a/combined.html
+++ b/combined.html
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-    <H1>Create a Recipe</H1>
+    <H1>My Recipe Box</H1>
     <div class="container">
         <div class="row">
             <div class="col mt-5 border rounded p-3">
-                <label for="recipe-name-input" class="form-label">Recipes</label>
+                <label for="recipe-name-input" class="form-label">Recipe</label>
                 <input type="text" class="form-control" id="recipe-name-input" />
                 <button type="button" class="btn btn-primary" onclick="onAddRecipe(); formClear()">Add</button>
 
@@ -27,48 +27,6 @@
             </div>
         </div>
     </div>
-
-    <!-- <div class="card">
-        <div class="card-body">
-            <div class="row">
-                <div class="col-sm">
-                    <div class="form-group">
-                        <label for="ingredient">Ingredient</label>
-                        <input type="text" class="form-control" id="ingredient">
-                    </div>
-                </div>
-                <div class="col-sm">
-                    <div class="form-group">
-                        <label for="amount">Amount</label>
-                        <input type="text" class="form-control" id="amount">
-                    </div>
-                </div>
-            </div>
-            <div>
-                <button id="add" class="btn btn-dark form-control mt-2">Add</button>
-            </div>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="row">
-        <div class="col col-xs-12">
-            <table id="list" class="table table-dark table-striped">
-                <tr>
-                    <th>Ingredient</th>
-                    <th>Amount</th>
-                    <th>Action</th>
-                    <th>
-                        <button type="submit" class="btn btn-warning" id="edit-button">Edit</button>
-                        <button type="submit" class = "btn btn-success" id="end-editing">Save</button>
-                    </th>
-                </tr>
-
-            </table>
-        </div>
-        </div>
-        </div> -->
-
 
     <script src="combined.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
